--- a/ExampleApp/Components/Pages/MainApp.razor
+++ b/ExampleApp/Components/Pages/MainApp.razor
@@ -16,7 +16,7 @@
 <PageTitle>@GetPageTitle()</PageTitle>
 
 <div style="height: 100vh; overflow: hidden; background: var(--bw-background); color: var(--bw-text-primary); position: relative;">
-    <div style="position: fixed; top: 1rem; right: 1rem; z-index: 1000;">
+    <div style="position: fixed; top: 16px; right: 16px; z-index: 1000;">
         <ThemeToggle @rendermode="InteractiveServer" />
     </div>
 
