--- a/ExampleApp/Components/Layout/NavMenu.razor.css
+++ b/ExampleApp/Components/Layout/NavMenu.razor.css
@@ -1,14 +1,14 @@
 .navbar-toggler {
     appearance: none;
     cursor: pointer;
-    width: 3.5rem;
-    height: 2.5rem;
+    width: 56px;
+    height: 40px;
     color: white;
     position: absolute;
-    top: 0.5rem;
-    right: 1rem;
+    top: 8px;
+    right: 16px;
     border: 1px solid rgba(255, 255, 255, 0.1);
-    background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") no-repeat center/1.75rem rgba(255, 255, 255, 0.1);
+    background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") no-repeat center/28px rgba(255, 255, 255, 0.1);
 }
 
 .navbar-toggler:checked {
@@ -16,20 +16,20 @@
 }
 
 .top-row {
-    height: 3.5rem;
+    height: 56px;
     background-color: rgba(0,0,0,0.4);
 }
 
 .navbar-brand {
-    font-size: 1.1rem;
+    font-size: 17.6px;
 }
 
 .bi {
     display: inline-block;
     position: relative;
-    width: 1.25rem;
-    height: 1.25rem;
-    margin-right: 0.75rem;
+    width: 20px;
+    height: 20px;
+    margin-right: 12px;
     top: -1px;
     background-size: cover;
 }
@@ -47,16 +47,16 @@
 }
 
 .nav-item {
-    font-size: 0.9rem;
-    padding-bottom: 0.5rem;
+    font-size: 14.4px;
+    padding-bottom: 8px;
 }
 
     .nav-item:first-of-type {
-        padding-top: 1rem;
+        padding-top: 16px;
     }
 
     .nav-item:last-of-type {
-        padding-bottom: 1rem;
+        padding-bottom: 16px;
     }
 
     .nav-item ::deep .nav-link {
@@ -64,10 +64,10 @@
         background: none;
         border: none;
         border-radius: 4px;
-        height: 3rem;
+        height: 48px;
         display: flex;
         align-items: center;
-        line-height: 3rem;
+        line-height: 48px;
         width: 100%;
     }
 
@@ -99,7 +99,7 @@
         display: block;
 
         /* Allow sidebar to scroll for tall menus */
-        height: calc(100vh - 3.5rem);
+        height: calc(100vh - 56px);
         overflow-y: auto;
     }
 }
